# CAP-PLAB2021

./: .gitignore  CMakeLists.txt  README.md  common.c  common.h  compile.sh  job.sh  job_cuda.sub  job_remote.sh  nn-main  nn-main.c  nn-main.cu  submit.sh  submit_remote.sh  uncrustify.cfg
